--- a/styles/components/_latest-news.scss
+++ b/styles/components/_latest-news.scss
@@ -49,8 +49,8 @@
                 bottom: -100px;
                 right: -30px;
                 display: flex;
-                flex-direction: row-reverse;
-                justify-content: flex-end;
+                // flex-direction: row-reverse;
+                // justify-content: flex-end;
 
                 li {
                     margin: 0;
