--- a/styles/components/_projects.scss
+++ b/styles/components/_projects.scss
@@ -34,10 +34,14 @@
                             width: 90%;
                             height: 280px;
 
-                            &:hover {
-                                position: relative;
-                                z-index: 5;
+                            @media(max-width: 576px) {
+                                width: 100%;
                             }
+
+                            // &:hover {
+                            //     position: relative;
+                            //     z-index: 5;
+                            // }
                         }
 
                         &:last-child {
@@ -46,11 +50,20 @@
                             left: 40%;
                             width: 300px;
                             height: 200px;
+
+                            @media(max-width: 576px) {
+                                left: 50%;
+                                transform: translateX(-50%);
+                            }
                         }
                     }
                 }
 
                 .desc {
+
+                    @media(max-width: 768px) {
+                        margin-top: 7rem;
+                    }
 
                     h3 {
                         font-weight: bold;
