--- a/styles/components/_statistics.scss
+++ b/styles/components/_statistics.scss
@@ -5,6 +5,10 @@
     margin-top: 6rem;
     padding-top: 130px;
 
+    @media(max-width: 576px) {
+        margin-top: 8rem;
+    }
+
     h2 {
         color: $color-white;
     }
