--- a/styles/components/_welcome-slider.scss
+++ b/styles/components/_welcome-slider.scss
@@ -27,6 +27,14 @@
                 flex-direction: column;
 
                 color: $color-white;
+
+                h1 {
+                    @media(max-width: 576px) {
+                        font-size: 1.5rem;
+                        font-weight: bold;
+                    }
+                }
+
             }
         }
 
