--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -100,6 +100,11 @@
         .sign {
             text-align: left;
             color: $color-secondary;
+
+            @media(max-width: 768px) {
+                text-align: unset;
+                margin-top: 2rem;
+            }
         }
     }
     
