--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -11,3 +11,6 @@ $color-primary-light: #029ec9;
 $color-secondary: #323333;
 
 $color-white-smoke: #f5f5f5;
+$color-white-ghost: #f8f8f9;
+
+$color-gold: #ffca00;
