--- a/styles/main.scss
+++ b/styles/main.scss
@@ -30,6 +30,7 @@
 // 6. Page-specific styles
 @import "pages/home";
 @import 'pages/about';
+@import 'pages/contact';
 
 // 7. Themes
 @import "themes/default";
