--- a/styles/main.css
+++ b/styles/main.css
@@ -749,3 +749,28 @@ body {
         padding: 1rem 0;
         border-radius: 50px;
         font-weight: bold; }
+
+.tenders-page {
+  background-color: #f5f5f5;
+  padding-top: 4rem;
+  padding-bottom: 2rem; }
+  .tenders-page .tender {
+    background-color: #FFF;
+    padding: 2rem;
+    border-radius: 8px;
+    margin-top: 1.5rem; }
+    .tenders-page .tender .head {
+      display: flex;
+      justify-content: space-between;
+      align-items: center; }
+      .tenders-page .tender .head h3 {
+        font-weight: bold;
+        margin-bottom: 0; }
+      .tenders-page .tender .head .time {
+        color: #bfbfbf;
+        font-size: .9rem; }
+        .tenders-page .tender .head .time img {
+          height: 1rem; }
+    .tenders-page .tender p {
+      margin-top: 1rem;
+      font-size: 1.1rem; }
