--- a/styles/main.scss
+++ b/styles/main.scss
@@ -31,6 +31,7 @@
 @import "pages/home";
 @import 'pages/about';
 @import 'pages/contact';
+@import 'pages/tenders';
 
 // 7. Themes
 @import "themes/default";
