--- a/styles/main.scss
+++ b/styles/main.scss
@@ -32,6 +32,7 @@
 @import 'pages/about';
 @import 'pages/contact';
 @import 'pages/tenders';
+@import 'pages/tenders-details';
 
 // 7. Themes
 @import "themes/default";
