--- a/styles/main.css
+++ b/styles/main.css
@@ -166,6 +166,37 @@ body {
   padding: .75rem 2rem;
   border-radius: 100px; }
 
+.breadcrumb {
+  background: none;
+  font-size: 1.1rem;
+  font-weight: 400;
+  margin-bottom: .5rem;
+  padding: 1.25rem 0 1rem; }
+  @media (max-width: 991px) {
+    .breadcrumb {
+      padding-left: .5rem;
+      padding-right: .5rem; } }
+  .breadcrumb .breadcrumb-item {
+    color: #323333; }
+    .breadcrumb .breadcrumb-item a:link,
+    .breadcrumb .breadcrumb-item a:visited {
+      color: #bfbfbf;
+      text-decoration: none; }
+  .breadcrumb .breadcrumb-item + .breadcrumb-item {
+    padding-right: 0; }
+  .breadcrumb .breadcrumb-item + .breadcrumb-item::before {
+    content: "";
+    background-image: url("../../images/icons/left-arrow.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 13px;
+    height: 13px;
+    margin-right: 1rem;
+    margin-left: 1rem; }
+  .breadcrumb .active {
+    font-weight: bold; }
+
 .counter {
   width: 100vw;
   height: 100vh;
@@ -828,3 +859,23 @@ body {
           margin-left: 1rem; }
         .tenders-details-page .attachments .files .file:not(:last-child) {
           margin-left: 1rem; }
+
+.bridges-page {
+  background-color: #f5f5f5;
+  padding-top: 2rem;
+  padding-bottom: 2rem; }
+  .bridges-page h2 {
+    margin-top: 2rem; }
+  .bridges-page .nav-tabs {
+    border: none;
+    margin-top: 3rem; }
+    .bridges-page .nav-tabs .nav-item .nav-link {
+      border: none;
+      padding: 1rem 2rem;
+      color: #323333;
+      font-weight: bold; }
+      .bridges-page .nav-tabs .nav-item .nav-link.active {
+        background-color: #016599;
+        color: #FFF;
+        border-radius: 30px;
+        font-weight: normal; }
