--- a/styles/main.scss
+++ b/styles/main.scss
@@ -34,6 +34,7 @@
 @import 'pages/tenders';
 @import 'pages/tenders-details';
 @import 'pages/bridges';
+@import 'pages/bridges-projects';
 
 // 7. Themes
 @import "themes/default";
