--- a/styles/layout/_breadcrumb.scss
+++ b/styles/layout/_breadcrumb.scss
@@ -26,10 +26,10 @@
 
     .breadcrumb-item + .breadcrumb-item::before {
         content: "";
-        background-image: url('../../images/icons/left-arrow.svg');
+        background-image: url('../../images/icons/ic-ic-arch-right-black-copy-2.svg');
         background-repeat: no-repeat;
         background-position: center;
-        background-size: contain;
+        // background-size: contain;
         width: 13px;
         height: 13px;
         margin-right: 1rem;
