--- a/styles/main.css
+++ b/styles/main.css
@@ -186,10 +186,9 @@ body {
     padding-right: 0; }
   .breadcrumb .breadcrumb-item + .breadcrumb-item::before {
     content: "";
-    background-image: url("../../images/icons/left-arrow.svg");
+    background-image: url("../../images/icons/ic-ic-arch-right-black-copy-2.svg");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain;
     width: 13px;
     height: 13px;
     margin-right: 1rem;
@@ -879,3 +878,28 @@ body {
         color: #FFF;
         border-radius: 30px;
         font-weight: normal; }
+
+.bridges-projects-page {
+  background-color: #f5f5f5;
+  padding-bottom: 2rem; }
+  .bridges-projects-page h2 {
+    margin-top: 2rem;
+    margin-bottom: 2.5rem; }
+  .bridges-projects-page .bridges-projects .bridges-project {
+    padding: 1rem;
+    background-color: #FFF;
+    margin-top: 1rem;
+    border-radius: 8px; }
+    .bridges-projects-page .bridges-projects .bridges-project img {
+      width: 100%;
+      height: 250px;
+      border-radius: 8px; }
+    .bridges-projects-page .bridges-projects .bridges-project h3 {
+      font-weight: bold; }
+    .bridges-projects-page .bridges-projects .bridges-project .desc {
+      display: flex;
+      margin-top: 2rem; }
+      .bridges-projects-page .bridges-projects .bridges-project .desc > div:not(:last-child) {
+        margin-left: 4rem; }
+    .bridges-projects-page .bridges-projects .bridges-project .info {
+      margin-top: 1.5rem; }
