--- a/styles/main.scss
+++ b/styles/main.scss
@@ -39,6 +39,7 @@
 @import 'pages/bridges-projects';
 @import 'pages/road-safety';
 @import 'pages/highways';
+@import 'pages/faq';
 
 // 7. Themes
 @import "themes/default";
