--- a/styles/main.css
+++ b/styles/main.css
@@ -1000,3 +1000,17 @@ body {
 
 .rotate {
   transform: rotate(180deg); }
+
+.error-page {
+  background-color: #f5f5f5;
+  padding: 2rem 0; }
+  .error-page .error-desc {
+    background-color: #FFF;
+    padding: 4rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+    .error-page .error-desc h3 {
+      font-weight: bold;
+      margin-top: 2rem; }
