--- a/styles/main.scss
+++ b/styles/main.scss
@@ -40,6 +40,7 @@
 @import 'pages/road-safety';
 @import 'pages/highways';
 @import 'pages/faq';
+@import 'pages/error';
 
 // 7. Themes
 @import "themes/default";
