--- a/styles/pages/_bridges-projects.scss
+++ b/styles/pages/_bridges-projects.scss
@@ -23,10 +23,15 @@
 
             h3 {
                 font-weight: bold;
+
+                @media(max-width: 768px) {
+                    margin-top: 1rem;
+                }
             }
 
             .desc {
                 display: flex;
+                flex-wrap: wrap;
                 margin-top: 2rem;
 
                 > div:not(:last-child) {
