--- a/styles/pages/_tenders-details.scss
+++ b/styles/pages/_tenders-details.scss
@@ -74,6 +74,7 @@
                 padding-left: 3rem;
                 background-color: $color-white;
                 border-radius: 8px;
+                margin-top: 1rem;
 
                 img {
                     height: 3rem;
