--- a/styles/pages/_tenders.scss
+++ b/styles/pages/_tenders.scss
@@ -11,6 +11,7 @@
 
         .head {
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-between;
             align-items: center;
 
@@ -22,6 +23,10 @@
             .time {
                 color: $color-gray;
                 font-size: .9rem;
+
+                @media(max-width: 768px) {
+                    margin-top: .5rem;
+                }
 
                 img {
                     height: 1rem;
