fixed header issue and highways page

--- a/styles/layout/_navbar.scss
+++ b/styles/layout/_navbar.scss
@@ -72,6 +72,12 @@
                             // border-radius: 50px;
                         }
 
+                        &:link,
+                        &:visited {
+                            background-color: $color-white;
+                            color: $color-primary;
+                        }
+
                     }
                 }
             }
