--- a/styles/pages/_highways.scss
+++ b/styles/pages/_highways.scss
@@ -62,11 +62,16 @@
                     .type {
                         margin-top: 1rem;
 
+                        h6 {
+                            margin-bottom: 0;
+                        }
+
                         .badge {
                             font-weight: normal;
                             font-size: 1rem;
                             border: 1px solid #e8e8e8;
                             padding: .7rem 1rem;
+                            margin-top: .5rem;
 
                             &:not(:last-of-type) {
                                 margin-left: .5rem;
