--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -16,3 +16,6 @@ $color-white-ghost: #f8f8f9;
 $color-gold: #ffca00;
 
 $color-gray: #bfbfbf;
+$color-gray-light: #b7b7b8;
+
+$color-light-blue: #9dcfe8;
